# ModernRoboticsCpp

./: .gitignore  CMakeLists.txt  README.md
MRCpp/include/: modern_robotics.h
MRCpp/src/: lib_test.cpp  modern_robotics.cpp
include/: modern_robotics.h
src/: lib_test.cpp  modern_robotics.cpp
test/: test.cpp
